--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
  /* Start variable */
 :root {
-    --main-color: #19c8fa;
+    --main-color: #2196f3;
+    --side-color: #1787e0;
+    --sec-color: #ececec;
     --transparent-color: rgb(15 116 143 / 70%);
     --p-color: #777;
     --medium-transition: 0.3s;
     --line-height: 2;
+    --sec-pad: 100px 0;
 }
 /* End variable */
 /* Start Global Rules */
@@ -54,7 +57,7 @@ a {
     .container {
         width: 970px;
     }
-}
+}     
 
 /* Large */
 @media (min-width: 1200px) {
@@ -64,4 +67,446 @@ a {
 }
 /* End Global Rules */
 /* Start Frame Work */
+/* -Start Section Title */
+.sec-title {
+    width: fit-content;
+    font-size: 30px;
+    font-weight: bold;
+    border: 2px solid;
+    padding: 10px 20px;
+    margin: 0 auto 100px;
+    text-align: center;
+    position: relative;
+    transition: var(--medium-transition);
+    transition-delay: 0.3s;
+    z-index: 1;
+}
+.sec-title::before {
+    content: '';
+    width: 13px;
+    height: 13px;
+    background-color: var(--main-color);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    left: calc(100% + 15%);
+    border-radius: 50%;
+    z-index: -1;
+    transition: 0.5s;
+}
+.sec-title::after {
+    content: '';
+    width: 13px;
+    height: 13px;
+    background-color: var(--main-color);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: calc(100% + 15%);
+    border-radius: 50%;
+    z-index: -1;
+    transition: 0.5s;
+}
+.sec-title:hover {
+    color: white;
+    border-color: transparent;
+}
+.sec-title:hover::after {
+    border-radius: 0%;
+    width: 50%;
+    height: 100%;
+    right: 50%;
+}
+.sec-title:hover::before {
+    border-radius: 0%;
+    width: 50%;
+    height: 100%;
+    left: 50%;
+}
+/* -End Section Title */
+/* -Srart Article */
+.art {
+    border-radius: 6px;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 0 2px 15px rgb(0 0 0 / 22%);
+}
+.art img {
+    max-width: 100%;
+}
+.art .text {
+    padding: 15px;
+}
+.art .text h3 {
+    margin-bottom: 10px;
+}
+.art .text p {
+    line-height: 1.5;
+    color: var(--p-color);
+}
+.art .more {
+    padding: 20px 15px;
+    color: var(--main-color);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 1px solid #d6d6d6;
+}
+.art .more a {
+    color: var(--main-color);
+    font-weight: bold;
+}
+.art .more i {
+}
+/* -End Article */
+/* -Start Gallery */
+.glry {
+    max-width: 100%;
+    background-color: white;
+    padding: 15px;
+        box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
+}
+.glry div {
+    max-width: 100%;
+    background-color: white;
+    overflow: hidden;
+    position: relative;
+}
+.glry div::before {
+    content: '';
+    position: absolute;
+    background-color: #ffffff2e;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: scale(0 , 0);
+    z-index: 9;
+    transition: var(--medium-transition);
+}
+.glry:hover div::before {
+    transform: scale(1, 1);
+    animation: opa 0.7s;
+}
+.glry:hover div::before {
+    animation: opa 1s;
+    animation-direction: normal;
+    animation-fill-mode: both;
+}
+@keyframes opa {
+    0% {
+        background-color: #ffffff2e;
+    }
+    100% {
+        background-color: transparent;
+    }
+}
+.glry div img {
+    max-width: 100%;
+    transition: var(--medium-transition);
+}
+.glry:hover img {
+    transform: rotate(5deg) scale(1.2 , 1.2);
+}
+/* -End gallery */
 /* End Frame Work */
+/* Start Header */
+header > div {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    position: relative;
+}
+
+header > div .logo {
+    color: var(--main-color);
+    font-size: 26px;
+    font-weight: bold;
+    height: 72px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0px 15px;
+}
+
+header > div > .nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 72px;
+}
+
+header > div > .nav .li {
+    height: 72px;
+}
+
+header > div > .nav .li .a {
+    height: 72px;
+    padding: 0px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-size: 18px;
+    position: relative;
+}
+
+header > div > .nav .li .a::before {
+    content: '';
+    width: 100%;
+    background-color: var(--main-color);
+    position: absolute;
+    height: 4px;
+    top: 0;
+    left: 0;
+    transform: rotateY(90deg);
+    transform-origin: left;
+        transition: transform var(--medium-transition);
+}
+
+header > div > .nav .li .a:hover::before {
+    transform: rotateY(1deg);
+}
+
+@media (max-width: 768px) {
+    header > div .logo {
+        margin: 0 auto;
+    }
+    header > div .nav {
+        height: auto;
+        margin: 0 auto;
+    }
+    header > div .nav .li {
+        height: auto;
+    }
+    header > div .nav .li .a {
+        padding: 0px 15px;
+        font-size: 14px;
+        height: 40px;
+    }
+}
+
+.megamenu {
+    position: absolute;
+    background-color: white;
+    width: calc(100% - 40px);
+    top: calc(100% + 50%);
+    opacity: 0;
+    display: none;
+    left: 0px;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+    border-bottom: 3px solid var(--main-color);
+    transition: display 1s, opacty 5s;
+    z-index: 9;
+}
+
+.nav .li.other:hover .megamenu {
+    display: flex;
+    opacity: 1;
+    top: calc(100% + 5%);
+}
+
+.megamenu img {
+    max-width: 35%;
+    margin-bottom: 5%;
+}
+
+.megamenu ul {
+}
+
+.megamenu ul li {
+}
+
+.megamenu ul li:not(:last-child) {
+    border-bottom: 1px solid #e9e6e6;
+}
+
+.megamenu ul li a {
+    display: flex;
+    align-items: center;
+    color: var(--main-color);
+    font-weight: bold;
+    padding: 15px 60px 15px 15px;
+    font-size: 18px;
+    position: relative;
+}
+
+.megamenu ul li a::before {
+    content: '';
+    width: 100%;
+    background-color: #fafafa;
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
+    transform: rotateY(90deg);
+    transform-origin: left;
+    transition: transform var(--medium-transition);
+}
+
+.megamenu ul li a:hover::before {
+    transform: rotateY(1deg);
+}
+
+.megamenu ul li a i {
+    padding-right: 10px;
+    z-index: 2;
+}
+
+.megamenu ul li a span {
+    z-index: 2;
+}
+
+@media (max-width: 992px) {
+    .megamenu {
+        width: calc(100% - 40px - 40px);
+        left: calc(0px + 20px);
+    }
+    .megamenu img {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .megamenu {
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 100%;
+        left: 0;
+        padding: 0;
+    }
+    .megamenu .border {
+        border-bottom: 1px solid #e9e6e6;
+    }
+    .megamenu ul {
+        width: 100%;
+    }
+    .megamenu ul li {
+        width: 100%;
+    }
+    .megamenu ul li a {
+        padding: 15px;
+        width: 100%;
+    }
+}
+/* End Header */
+/* Start Lnading */
+.landing {
+    background-color: var(--sec-color);
+    height: 70vh;
+    display: flex;
+    align-items: center;
+    position: relative;
+}
+
+.landing::before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    bottom: -20%;
+    left: 0;
+    background-color: var(--sec-color);
+    transform: skewY(-5deg);
+    z-index: -1;
+}
+
+.landing > div {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+.landing > div .text {
+    width: 50%;
+}
+
+.landing > div .text h1 {
+    font-size: 40px;
+}
+
+.landing > div .text p {
+    color: var(--p-color);
+    line-height: var(--line-height);
+    width: 80%;
+    font-size: 18px;
+}
+
+.landing > div .image {
+    width: 50%;
+}
+
+.landing > div .image img {
+    max-width: 100%;
+    animation: up-and-down 5s linear infinite;
+}
+
+.landing > div a {
+    animation: bouncing 1.5s infinite;
+}
+
+.landing > div a .arrow {
+    position: absolute;
+    bottom: -25%;
+    left: 50%;
+    font-size: 30px;
+    color: var(--main-color);
+}
+
+@media (min-width: 768px) {
+    .landing > div .image {
+        display: none;
+    }
+    .landing > div .text {
+        margin: 0 auto;
+        text-align: center;
+        width: 100%;
+    }
+    .landing > div .text p {
+        width: 50%;
+        margin: 0 auto;
+    }
+}
+
+@media (max-width: 768px) {
+    .landing > div .image {
+        display: none;
+    }
+    .landing > div .text {
+        margin: 0 auto;
+        text-align: center;
+        width: 100%;
+    }
+    .landing > div .text p {
+        margin: 0 auto;
+    }
+    .landing > div .text h1 {
+    font-size: 28px;
+    }
+}
+/* End Lnading */
+/* Start Articles */
+.articles {
+    padding: 350px 0 100px;
+}
+
+.articles .art-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 40px;
+}
+/* End Articles */
+/* Start Gallery */
+.gallery {
+    background-color: var(--sec-color);
+    padding: var(--sec-pad);
+}
+
+.gallery > div .glry-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 40px;
+}
+/* End Gallery */
