--- a/css/style.css
+++ b/css/style.css
@@ -510,3 +510,118 @@ header > div > .nav .li .a:hover::before {
     gap: 40px;
 }
 /* End Gallery */
+/* Start Features */
+.features > div {
+    padding: var(--sec-pad);
+}
+
+.features > div .feat-box {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 40px;
+}
+
+.features > div .feat-box .feat {
+    border: 1px solid #dfdfdf;
+}
+
+.features > div .feat-box .feat .header {
+    max-width: 100%;
+    max-height: 100%;
+    position: relative;
+}
+
+.features > div .feat-box .feat .header img {
+    max-width: 100%;
+}
+
+.features > div .feat-box .feat .header::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 99%;
+    background-color: #f44036;
+    opacity: 0.4;
+}
+
+.features > div .feat-box .feat .header img::before {
+}
+
+.features > div .feat-box .feat .content {
+    text-align: center;
+    padding: 50px 0;
+}
+
+.features > div .feat-box .feat .content .title-feat {
+    width: fit-content;
+    font-weight: bold;
+    font-size: 40px;
+    position: relative;
+    margin: 0 auto;
+    padding: 11px 0;
+}
+
+.features > div .feat-box .feat .content .title-feat::after {
+    content: '';
+    position: absolute;
+    top: 100%;
+    left: 20%;
+    width: 60%;
+    height: 6px;
+    background-color: #f44036;
+}
+
+.features > div .feat-box .feat .content p {
+    color: var(--p-color);
+    font-size: 20px;
+    padding: 50px 20px 0;
+    line-height: var(--line-height);
+}
+
+.features > div .feat-box .feat .footer {
+    padding: 20px;
+
+}
+
+.features > div .feat-box .feat .footer span {
+    width: fit-content;
+    margin: 0 auto;
+    display: block;
+    font-size: 22px;
+    border: 2px solid #f44036;
+    border-radius: 8px;
+    padding: 10px 30px;
+    font-weight: bold;
+    color: #f44036;
+}
+
+.features > div .feat-box .feat:nth-child(2)
+.header::after {
+    background-color: #009688;
+}
+.features > div .feat-box .feat:nth-child(2)
+.content .title-feat::after {
+    background-color: #009688;
+}
+.features > div .feat-box .feat:nth-child(2)
+.footer span {
+    border-color: #009688;
+    color: #009688;
+}
+
+.features > div .feat-box .feat:nth-child(3)
+.header::after {
+    background-color: #03a9f4;
+}
+.features > div .feat-box .feat:nth-child(3)
+.content .title-feat::after {
+    background-color: #03a9f4;
+}
+.features > div .feat-box .feat:nth-child(3)
+.footer span {
+    border-color: #03a9f4;
+    color: #03a9f4;
+}
+/* End Features */
