--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,58 @@ a {
     left: 50%;
 }
 /* -End Section Title */
+/* -Start Dots */
+.dots.up img:first-child {
+    position: absolute;
+    top: 15%;
+    left: 1%;
+}
+
+.dots.up img:last-child {
+    position: absolute;
+    bottom: 15%;
+    right: 1%;
+}
+
+.dots.down img:first-child {
+    position: absolute;
+    bottom: 15%;
+    left: 1%;
+}
+
+.dots.down img:last-child {
+    position: absolute;
+    top: 15%;
+    right: 1%;
+}
+/* -End Dots */
+/* -Start Most Popular */
+.card.popular {
+    top: -20px;
+}
+
+.popular .label {
+    position: absolute;
+    background-color: var(--main-color);
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    padding: 10px 10px 35px 10px;
+    right: 25px;
+    writing-mode: vertical-rl;
+}
+
+.popular .label::before {
+    content: '';
+    width: 0px;
+    position: absolute;
+    border-style: solid;
+    border-width: 20px;
+    border-color: transparent transparent white transparent;
+    right: 0px;
+    bottom: 0px;
+}
+/* -End Most Popular */
 /* End Frame Work */
 /* Start Header */
 header > div {
@@ -736,3 +788,378 @@ header > div > .nav .li .a:hover::before {
     padding: 6px 0;
 }
 /* End Team Members */
+/* Start Services */
+.services {
+    background-color: var(--sec-color);
+}
+
+.services > div {
+    padding: var(--sec-pad);
+}
+
+.services > div .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 40px;
+}
+
+.services .container .cards .card {
+    background-color: white;
+    box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+}
+
+.services > div .cards .card .header {
+    text-align: center;
+}
+
+.services > div .cards .card .header i {
+    color: #d5d5d5;
+    padding: 40px 0;
+}
+
+.services > div .cards .card .header h3 {
+    color: var(--main-color);
+    padding-bottom: 30px;
+    font-size: 25px;
+    font-weight: bold;
+}
+
+.services > div .cards .card .footer {
+    background-color: #f9f9f9;
+    padding: 15px;
+    position: relative;
+    text-align: right;
+}
+
+.services > div .cards .card .footer::before {
+    content: '01';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--main-color);
+    height: 100%;
+    width: 25%;
+    color: white;
+    font-weight: bold;
+    font-size: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    padding-left: 20px;
+}
+
+.services > div .cards .card .footer::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 20%;
+    background-color: #d5d5d5;
+    height: 102%;
+    width: 15%;
+    transform: skewX(-30deg);
+}
+
+.services > div .cards .card .footer a {
+    color: var(--main-color);
+}
+/* End Services */
+/* Start Our Skills */
+.ourskills {
+}
+
+.ourskills > div {
+    padding: var(--sec-pad);
+}
+
+.ourskills > div .box {
+    display: flex;
+    align-items: center;
+}
+
+.ourskills > div .box img {
+}
+
+.ourskills > div .box .data {
+}
+
+.ourskills > div .box .data {
+    flex: 1;
+}
+
+.ourskills > div .box .data span {
+    font-weight: bold;
+    display: block;
+}
+
+.ourskills > div .box .data span + div {
+    height: 30px;
+    background-color: #eee;
+    margin: 10px 0;
+    position: relative;
+}
+
+.ourskills > div .box .data span + div::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--main-color);
+    width: 80%;
+    height: 100%;
+}
+
+.ourskills > div .box .data span + div::after {
+    content: '80%';
+    position: absolute;
+    top: calc(0px - 100% - 5%);
+    right: 0;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    padding: 3px 5px;
+    color: var(--main-color);
+    font-size: 12px;
+    font-weight: bold;
+}
+/* End Our Skills */
+/* Start How it Works */
+.how-it-works {
+    background-color: var(--sec-color);
+}
+
+.how-it-works > div {
+    padding: var(--sec-pad);
+}
+
+.how-it-works > div .box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.how-it-works > div .box img {
+    max-width: 100%;
+    padding-right: 50px;
+}
+
+.how-it-works > div .box .cards {
+}
+
+.how-it-works > div .box .cards .card {
+    background-color: #f6f5f5;
+    border: 2px solid white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    margin: 20px;
+}
+
+.how-it-works > div .box .cards .card img {
+    width: 64px;
+    height: 64px;
+    padding: 10px 40px 10px 10px;
+}
+
+.how-it-works > div .box .cards .card .text {
+}
+
+.how-it-works > div .box .cards .card .text h3 {
+    font-size: 22px;
+    padding: 10px 0;
+}
+
+.how-it-works > div .box .cards .card .text p {
+    font-size: 18px;
+    color: var(--p-color);
+    line-height: 1.5;
+}
+/* End How it Works */
+/* Start Latest Events */
+.latest-events {
+    position: relative;
+}
+
+.latest-events > div {
+    padding: var(--sec-pad);
+}
+
+.latest-events > div .box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.latest-events > div .box img {
+    max-width: 450px;
+    margin-right: 20px;
+}
+
+.latest-events > div .box .NaN1 {
+}
+
+.latest-events > div .box .NaN1 .count-down {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.latest-events > div .box .NaN1 .count-down .count {
+    border: 1px solid #d4d4d4;
+    width: fit-content;
+    border-radius: 10px;
+    width: 90px;
+    text-align: center;
+    margin-left: 20px;
+}
+
+.latest-events > div .box .NaN1 .count-down .count .num {
+    color: var(--main-color);
+    font-size: 40px;
+    font-weight: bold;
+    border-bottom: 1px solid #d4d4d4;
+    padding: 20px 10px;
+}
+
+.latest-events > div .box .NaN1 .count-down .count span {
+    padding: 10px 5px;
+    display: block;
+}
+
+.latest-events > div .box .NaN1 .text {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.latest-events > div .box .NaN1 .text h3 {
+    font-size: 30px;
+    margin: 20px 0;
+}
+
+.latest-events > div .box .NaN1 .text p {
+    font-size: 19px;
+    color: var(--p-color);
+    line-height: 1.5;
+}
+
+.latest-events > div .sub {
+    margin: 70px auto 0px;
+    width: fit-content;
+}
+
+.latest-events > div .sub form {
+    background-color: #f6f5f5;
+    width: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 30px 40px;
+    border-radius: 50px;
+    gap: 20px;
+}
+
+.latest-events > div .sub form .email {
+    border: none;
+    caret-color: var(--main-color);
+    padding: 25px;
+    border-radius: 50px;
+    flex: 1;
+}
+.latest-events > div .sub form .email:focus-visible {
+    outline: none;
+}
+
+.latest-events > div .sub form .submit {
+    border: none;
+    background-color: var(--main-color);
+    border-radius: 50px;
+    padding: 25px;
+    color: white;
+    font-weight: bold;
+}
+/* End Latest Events */
+/* Start Pricing Plans */
+.pricing-plans {
+    background-color: var(--sec-color);
+    position: relative;
+}
+
+.pricing-plans > div {
+    padding: var(--sec-pad);
+}
+
+.pricing-plans > div .cards {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 30px;
+    padding: 0 15px;
+}
+
+.pricing-plans > div .cards .card {
+    background-color: white;
+    box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+    z-index: 1;
+    position: relative;
+}
+
+.pricing-plans > div .cards .card .header {
+    text-align: center;
+}
+
+.pricing-plans > div .cards .card .header h3 {
+    font-size: 25px;
+    margin: 30px 0;
+}
+
+.pricing-plans > div .cards .card .header img {
+    width: 80px;
+    margin-bottom: 30px;
+}
+
+.pricing-plans > div .cards .card .header .price {
+    font-size: 60px;
+    color: var(--main-color);
+    font-weight: bold;
+    width: fit-content;
+    margin:0px auto 5px;
+}
+.pricing-plans > div .cards .card .header span {
+    color: #777;
+}
+
+
+.pricing-plans > div .cards .card .features {
+    margin-top: 10px;
+}
+
+.pricing-plans > div .cards .card .features .feature {
+    border-top: 1px solid #eee;
+    position: relative;
+    padding: 20px;
+    padding-left: 30px;
+}
+
+.pricing-plans > div .cards .card .features .feature::before {
+    font-family: "Font Awesome 5 Free";
+    content: "\f00c";
+    margin-right: 10px;
+    margin-left: 10px;
+    font-weight: 900;
+    color: var(--main-color);
+    position: absolute;
+    left: 0;
+}
+
+.pricing-plans > div .cards .card .footer {
+    padding: 50px 0;
+    text-align: center;
+}
+
+.pricing-plans > div .cards .card .footer span {
+    color: var(--main-color);
+    font-weight: bold;
+    border: 2px solid;
+    border-color: var(--main-color);
+    border-radius: 8px;
+    padding: 10px 15px;
+}
+/* End Pricing Plans */
