--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,13 @@ a {
     text-decoration: none;
 }
 
+ hr {
+    height: 0;
+    width: 100%;
+    border: 1px solid white;
+    margin: 8px 0;
+ }
+
 .container {
     padding-left: 15px;
     padding-right: 15px;
@@ -665,22 +672,44 @@ header > div > .nav .li .a:hover::before {
 }
 
 .features > div .feat-box .feat .footer {
-    padding: 20px;
-
-}
-
-.features > div .feat-box .feat .footer span {
     width: fit-content;
-    margin: 0 auto;
-    display: block;
-    font-size: 22px;
     border: 2px solid #f44036;
     border-radius: 8px;
     padding: 10px 30px;
+    margin: 30px auto;
+    position: relative;
+    font-size: 22px;
     font-weight: bold;
     color: #f44036;
 }
 
+.features > div .feat-box .feat .footer a {
+    color: #f44036;
+    transition: color var(--medium-transition);
+}
+
+.features > div .feat-box .feat .footer:hover a {
+    color: white;
+}
+
+.features > div .feat-box .feat .footer:hover::before {
+    transform: rotateY(1deg);
+}
+
+.features > div .feat-box .feat .footer::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f44036;
+    transform: rotateY(90deg);
+    transform-origin: left;
+    transition: transform var(--medium-transition);
+    z-index: -1;
+}
+
 .features > div .feat-box .feat:nth-child(2)
 .header::after {
     background-color: #009688;
@@ -690,9 +719,18 @@ header > div > .nav .li .a:hover::before {
     background-color: #009688;
 }
 .features > div .feat-box .feat:nth-child(2)
-.footer span {
+.footer,
+.features > div .feat-box .feat:nth-child(2)
+.footer a {
     border-color: #009688;
     color: #009688;
+}
+.features > div .feat-box .feat:nth-child(2)
+.footer:hover a {
+    color: white;
+}
+.features > div .feat-box .feat:nth-child(2) .footer::before {
+    background-color: #009688;
 }
 
 .features > div .feat-box .feat:nth-child(3)
@@ -704,9 +742,18 @@ header > div > .nav .li .a:hover::before {
     background-color: #03a9f4;
 }
 .features > div .feat-box .feat:nth-child(3)
-.footer span {
+.footer,
+.features > div .feat-box .feat:nth-child(3)
+.footer a {
     border-color: #03a9f4;
     color: #03a9f4;
+}
+.features > div .feat-box .feat:nth-child(3)
+.footer:hover a {
+    color: white;
+}
+.features > div .feat-box .feat:nth-child(3) .footer::before {
+    background-color: #03a9f4;
 }
 /* End Features */
 /* Start Testimonials */
@@ -784,9 +831,28 @@ header > div > .nav .li .a:hover::before {
     position: absolute;
     width: 85%;
     height: 100%;
-    z-index: -1;
+    z-index: -2;
     background-color: var(--sec-color);
     right: 0;
+}
+
+.teammembers > div .cards .card::after {
+    content: '';
+    width: 85%;
+    height: 100%;
+    border-radius: 10px;
+    background-color: #e4e4e4;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: rotateY(90deg);
+    transform-origin: right;
+    transition: transform var(--medium-transition);
+    z-index: -1;
+}
+
+.teammembers > div .cards .card:hover::after {
+    transform: rotateY(1deg);
 }
 
 .teammembers > div .cards .card .content {
@@ -799,10 +865,15 @@ header > div > .nav .li .a:hover::before {
     width: 300px;
     max-width: 100%;
     border-radius: 10px;
+    transition: var(--medium-transition);
+}
+
+.teammembers > div .cards .card:hover .content img {
+    filter: grayscale(100%);
 }
 
 .teammembers > div .cards .card .content ul {
- margin: 0 auto;
+    margin: 0 auto;
 }
 
 .teammembers > div .cards .card .content ul li {
@@ -811,6 +882,11 @@ header > div > .nav .li .a:hover::before {
 
 .teammembers > div .cards .card .content ul li a i {
     color: var(--p-color);
+    transition: var(--medium-transition);
+}
+
+.teammembers > div .cards .card .content ul li a i:hover {
+    color: var(--main-color);
 }
 
 .teammembers > div .cards .card .title {
@@ -847,6 +923,41 @@ header > div > .nav .li .a:hover::before {
 .services .container .cards .card {
     background-color: white;
     box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
+    transition: var(--medium-transition);
+    position: relative;
+}
+
+.services .container .cards .card:hover {
+    transform: translateY(-10px);
+}
+
+.services .container .cards .card::before {
+    content: '';
+    width: 50%;
+    height: 2px;
+    background-color: var(--main-color);
+    position: absolute;
+    top: 0;
+    right: 0%;
+    transform: rotateY(90deg);
+    transform-origin: left;
+    transition: transform var(--medium-transition);
+}
+.services .container .cards .card::after {
+    content: '';
+    width: 50%;
+    height: 2px;
+    background-color: var(--main-color);
+    position: absolute;
+    top: 0;
+    left: 0%;
+    transform: rotateY(90deg);
+    transform-origin: right;
+    transition: transform var(--medium-transition);
+}
+.services .container .cards .card:hover::before,
+.services .container .cards .card:hover::after {
+    transform: rotateY(0deg);
 }
 
 .services > div .cards .card .header {
@@ -985,6 +1096,7 @@ header > div > .nav .li .a:hover::before {
 .how-it-works > div .box img {
     max-width: 100%;
     padding-right: 50px;
+    z-index: 2;
 }
 
 .how-it-works > div .box .cards .card {
@@ -995,12 +1107,33 @@ header > div > .nav .li .a:hover::before {
     align-items: center;
     padding: 30px;
     margin: 20px;
+    position: relative;
+}
+
+.how-it-works > div .box .cards .card::before {
+    content: '';
+    position: absolute;
+    background-color: #ededed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: scale(0 , 0);
+    transition: var(--medium-transition);
+    z-index: 1;
+}
+.how-it-works > div .box .cards .card:hover::before {
+    transform: scale(1, 1);
 }
 
 .how-it-works > div .box .cards .card img {
     width: 64px;
     height: 64px;
     padding: 10px 40px 10px 10px;
+}
+
+.how-it-works > div .box .cards .card .text {
+    z-index: 2;
 }
 
 .how-it-works > div .box .cards .card .text h3 {
@@ -1047,6 +1180,7 @@ header > div > .nav .li .a:hover::before {
     width: 90px;
     text-align: center;
     margin-left: 20px;
+    transition: var(--medium-transition);
 }
 
 .latest-events > div .box .NaN1 .count-down .count .num {
@@ -1055,6 +1189,12 @@ header > div > .nav .li .a:hover::before {
     font-weight: bold;
     border-bottom: 1px solid #d4d4d4;
     padding: 20px 10px;
+    transition: var(--medium-transition);
+}
+
+.latest-events > div .box .NaN1 .count-down .count:hover,
+.latest-events > div .box .NaN1 .count-down .count:hover .num {
+    border-color: var(--main-color);
 }
 
 .latest-events > div .box .NaN1 .count-down .count span {
@@ -1136,6 +1276,11 @@ header > div > .nav .li .a:hover::before {
     box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
     z-index: 1;
     position: relative;
+    transition: var(--medium-transition);
+}
+
+.pricing-plans > div .cards .card:hover {
+    background-color: rgb(245, 245, 245);
 }
 
 .pricing-plans > div .cards .card .header {
@@ -1144,7 +1289,7 @@ header > div > .nav .li .a:hover::before {
 
 .pricing-plans > div .cards .card .header h3 {
     font-size: 25px;
-    margin: 30px 0;
+    padding: 30px 0px;
 }
 
 .pricing-plans > div .cards .card .header img {
@@ -1191,13 +1336,19 @@ header > div > .nav .li .a:hover::before {
     text-align: center;
 }
 
-.pricing-plans > div .cards .card .footer span {
+.pricing-plans > div .cards .card .footer a {
     color: var(--main-color);
     font-weight: bold;
     border: 2px solid;
     border-color: var(--main-color);
     border-radius: 8px;
     padding: 10px 15px;
+    transition: var(--medium-transition);
+}
+
+.pricing-plans > div .cards .card .footer a:hover {
+    background-color: var(--main-color);
+    color: white;
 }
 /* End Pricing Plans */
 /* Start Top Videos */
@@ -1237,6 +1388,15 @@ header > div > .nav .li .a:hover::before {
 
 .top-videos > div .box ul li a .title {
     padding-bottom: 10px;
+    transition: var(--medium-transition);
+}
+
+.top-videos > div .box ul li a:hover .title {
+    color: var(--main-color);
+}
+
+.top-videos > div .box ul li a .min {
+    color: var(--p-color);
 }
 
 .top-videos > div .box .container-video {
@@ -1264,7 +1424,7 @@ header > div > .nav .li .a:hover::before {
     background-image: url(/image/stats.jpg);
     background-size: cover;
     position: relative;
-    z-index: -2;
+    z-index: -3;
 }
 
 .our-awesome-stats::after {
@@ -1275,7 +1435,7 @@ header > div > .nav .li .a:hover::before {
     top: 0;
     left: 0;
     background-color: #fffffff2;
-    z-index: -1;
+    z-index: -2;
 }
 
 .our-awesome-stats > div h2 {
@@ -1289,6 +1449,7 @@ header > div > .nav .li .a:hover::before {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: -1;
 }
 
 .our-awesome-stats > div ul li {
@@ -1300,8 +1461,42 @@ header > div > .nav .li .a:hover::before {
     opacity: 0.8;
     text-align: center;
     width: 20%;
+    position: relative;
+}
+.our-awesome-stats > div ul li:hover {
+    transform: translateX(10px);
 }
 
+.our-awesome-stats > div ul li::before {
+    content: '';
+    width: 2px;
+    height: 100%;
+    background-color: var(--main-color);
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: rotateX(90deg);
+    transform-origin: top;
+    transition: transform var(--medium-transition);
+}
+.our-awesome-stats > div ul li::after {
+    content: '';
+    width: 2px;
+    height: 100%;
+    background-color: var(--main-color);
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: rotateY(90deg);
+    transform-origin: bottom;
+    transition: transform var(--medium-transition);
+}
+.our-awesome-stats > div ul li:hover::before {
+    transform: rotateX(0deg);
+}
+.our-awesome-stats > div ul li:hover::after {
+    transform: rotateY(0deg);
+}
 .our-awesome-stats > div ul li i {
     margin: 10px auto;
 }
@@ -1462,6 +1657,17 @@ footer > div .box-footer .contact .social a {
     width: 50px;
     height: 50px;
     font-size: 20px;
+    transition: var(--medium-transition);
+}
+
+footer > div .box-footer .contact .social a:hover {
+    background-color: #4267B2;
+}
+footer > div .box-footer .contact .social a:nth-child(2):hover {
+    background-color: #1DA1F2;
+}
+footer > div .box-footer .contact .social a:nth-child(3):hover {
+    background-color: #FF0000;
 }
 
 footer > div .box-footer .contact p {
@@ -1479,6 +1685,12 @@ footer > div .box-footer .links {
 footer > div .box-footer .links a {
     color: #b9b9b9;
     padding: 15px 0;
+    transition: var(--medium-transition);
+}
+
+footer > div .box-footer .links a:hover {
+    padding-left: 10px;
+    color: white;
 }
 
 footer > div .box-footer .links a::before {
@@ -1489,10 +1701,9 @@ footer > div .box-footer .links a::before {
     color: var(--main-color);
 }
 
-footer > div .box-footer .links a:not(:last-of-type) {
+footer > div .box-footer .links a:not(:last-child) {
     border-bottom: 1px solid #444;
 }
-
 footer > div .box-footer .info {
     margin-top: 60px;
 }
